--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "init-db": "node scripts/init-db.js",
     "init-data": "node scripts/init-data.js",
-    "pull-data": "node scripts/pull-data.mjs",
+    "modify-db": "node scripts/modify-db.js",
+    "pull-game": "node scripts/pull-game.mjs",
+    "pull-playlist": "node scripts/pull-playlist.mjs",
     "get-img": "node scripts/get-img.mjs",
     "get-img-prod": "node scripts/get-img.mjs --dir=../nia.itomka.com/assets"
   },
